Creating a button that will gather how many rows the user wants and display them after clearing the previous grids

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
         <link rel = "stylesheet" href = "style.css">
     </head>
     <body>
+        <div id = "title"><h1>Etch a Sketch</h1>
+        <div class = "header">
+            <p>How big do you want the grid to be?</p>
+            
+            <button>Create</button>
+        </div>
+        
+        </div>
         <div id = flex>
             <div id = "container"></div>
         </div>
